# MigangBot_CPP

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  config.yml.example  docker-compose.yml
.cache/clangd/index/: AsyncHttpClient.cpp.39D4C2DAB1FC6319.idx  AsyncHttpClient.h.6DD123AD4197B7A5.idx  Buffer.h.680168AFA0C3C3F7.idx  Channel.h.C8EC17F39FD42E9D.idx  Customize.h.168348F64CD827C8.idx  Event.h.4749F13BFB41B699.idx  EventLoop.h.62B1FC15BFEC4B91.idx  EventLoopThread.h.87A07008D3B159DB.idx  FileCache.cpp.9499CC599F8B7B8F.idx  FileCache.h.26A5AE10982399DE.idx  Http1Parser.cpp.9C374BFC346952F8.idx  Http1Parser.h.B30DBE3F505B4346.idx  Http2Parser.cpp.0EDAFC0B81CDBCD8.idx  Http2Parser.h.E1B588A777685E5E.idx  HttpContext.h.054595953453B1B2.idx  HttpHandler.cpp.AA2EF4BEFE0027B1.idx  HttpHandler.h.7D1FF056930A2540.idx  HttpMessage.cpp.EDDB20D61E45DB17.idx  HttpMessage.h.A82D8E8481056545.idx  HttpParser.cpp.115E583CB45AED96.idx  HttpParser.h.F174937E3AC8A979.idx  HttpResponseWriter.h.04E9FEE3EEEB0EE9.idx  HttpServer.cpp.437F70A8E0DF5353.idx  HttpServer.h.4204662406A51275.idx  HttpService.cpp.88EBC4ADA5BC5A63.idx  HttpService.h.A4401D67ABACAE9F.idx  MapMemory.h.CB3CF943EA3E6259.idx  RAII.cpp.FF9AE8A0642F0467.idx  Statistics.h.BFC0994ED79ABD54.idx  Status.h.4EE3D372F1015735.idx  Synchronize.h.5502E7889419128B.idx  TcpClient.h.2540B221D4651883.idx  ThreadLocalStorage.cpp.44D078241C12FACB.idx  ThreadLocalStorage.h.84067E90F1630F12.idx  TypeDefinitions.h.0566B027D57330EE.idx  WebSocketChannel.h.CF6B92C7D5EB2C9E.idx  WebSocketClient.cpp.D155ECDCCBB7FC9B.idx  WebSocketClient.h.DB1C2135DC49217E.idx  WebSocketParser.cpp.113A9EC18EB05F70.idx  WebSocketParser.h.C3EB083575E09329.idx  (+436 more)
.github/workflows/: cmake.yml  docker.yml  release.yml
Resources/configs/: zhanbu.yml
Sources/: aiorequests.h  global_config.h  listener.h  main.cpp  module_list.h  module_manager.h  type.h  utility.h  version.h
Sources/api/onebot_11/: api_impl.h
Sources/bot/: api_bot.h  bot.cpp  bot.h  convert_to_string.h  ring_buffer.h
Sources/bot/onebot_11/: api_bot.h  future_wrapper.h
Sources/config/: config.h
Sources/database/: mysql_conn.h  mysql_conn_pool.h  mysql_wrapper.h  redis_conn.h  redis_conn_pool.h  redis_wrapper.h
Sources/event/: event.h  event_filter.h  event_handler.h  search_result.h  trie.h  types.h
Sources/event/onebot_11/: event_filter.h
Sources/logger/: logger.h
Sources/message/: message_segment.h  message_segmentation.h  type.h  utility.h
Sources/modules/: module_interface.h  utility.h
Sources/modules/module/: echo.h
Sources/modules/module/bilibili_parser/: bilibili_parser.h
Sources/modules/module/botmanage/: feedback.h  feedback_recorder.h  help.h  status_info.h
Sources/modules/module/eorzea_zhanbu/: eorzea_zhanbu.h  zhanbu_recorder.h  zhanbu_utils.h
Sources/modules/module/tencentcloud_nlp/: auto_summarization.h  config.h  keywords_extraction.h
Sources/permission/: permission.h
Sources/plugins/: plugin_interface.h  utility.h
Sources/plugins/module/: echo.h
Sources/plugins/module/botmanage/: help.h
Sources/pool/: thread_pool.h
examples/: TencentCloudNLP.md  bilibiliparser.md  botmanage_feedback.md  botmanage_help.md  botmanage_status_info.md  echo.md  eorzea_zhanbu.md
source/: aiorequests.h  closure.h  co_future.h  global_config.h  main.cpp  module_list.h  module_manager.h  server.h  type.h  utility.h  version.h
source/api/onebot_11/: api_impl.h
source/bot/: bot.h  convert_to_string.h  ring_buffer.h
source/bot/onebot_11/: api_bot.h  default_value.h  desired_value.h  future_wrapper.h
source/database/: mysql_conn.h  mysql_conn_pool.h  mysql_wrapper.h  redis_conn.h  redis_conn_pool.h  redis_wrapper.h
source/db/: db.h  db_orm.h  table_list_h
source/db/db_conn/: conn_pool.h  mysql_conn.h  mysql_conn_pool.h  orm_pool.h  redis_conn.h  redis_conn_pool.h
source/event/: Registrar.h  event.h  event_filter.h  event_handler.h  regex_matcher.h  search_result.h  trie.h  type.h  types.h
source/event/onebot_11/: event_filter.h
source/logger/: logger.h
source/message/: message_segment.h  type.h  utility.h
source/modules/: module_interface.h
source/modules/module/: echo.h
source/modules/module/bilibili_parser/: bilibili_parser.h
source/modules/module/botmanage/: auto_clean_group.h  baned_kicked.h  botmanage.h  config.cpp  config.h  dismiss.h  feedback.h  feedback_recorder.h  friend_invite.h  group_invite.h  help.cpp  help.h  manage_bot.h  status_info.h  sv.h  white_black.h
source/modules/module/eorzea_zhanbu/: eorzea_zhanbu.h  zhanbu_recorder.h  zhanbu_utils.h
source/modules/module/morning/: morning.h
source/modules/module/tencentcloud_nlp/: auto_summarization.h  config.h  keywords_extraction.h
source/modules/module/weather/: eorzean_weather.h  eorzean_weather_data.cpp  eorzean_weather_data.h  qweather_api.h  qweather_settings.cpp  qweather_settings.h  weather.h
source/modules/module/weibo/: utils.h  weibo_push.h  weibo_recorder.h  weibo_spider.h
source/permission/: permission.h
source/pool/: thread_pool.h
source/schedule/: schedule.h
source/schedule/Bosma/: Scheduler.h  croncpp.h
source/service/: schedule_service.h  service.h  service_manager.h  triggered_service.h
source/tools/: aiorequests.h
source/tools/libxml2_white/: html_doc.h  html_node.h
test/: CMakeLists.txt
test/pressure_test/: CMakeLists.txt  pressure_test.cpp
